; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_platform_tests.c_lt_grab_spin_lock_with_try.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_platform_tests.c_lt_grab_spin_lock_with_try.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lt_lck_spin_t = common dso_local global i32 0, align 4
@lt_counter = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @lt_grab_spin_lock_with_try to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lt_grab_spin_lock_with_try() #0 {
  br label %1

1:                                                ; preds = %4, %0
  %2 = call i64 @lck_spin_try_lock(i32* @lt_lck_spin_t)
  %3 = icmp eq i64 0, %2
  br i1 %3, label %4, label %5

4:                                                ; preds = %1
  br label %1

5:                                                ; preds = %1
  %6 = load i32, i32* @lt_counter, align 4
  %7 = add nsw i32 %6, 1
  store i32 %7, i32* @lt_counter, align 4
  %8 = call i32 (...) @lt_spin_a_little_bit()
  %9 = call i32 @lck_spin_unlock(i32* @lt_lck_spin_t)
  ret void
}

declare dso_local i64 @lck_spin_try_lock(i32*) #1

declare dso_local i32 @lt_spin_a_little_bit(...) #1

declare dso_local i32 @lck_spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
